fix: corrige lancement borne (clavier+musique), supprime dépréciations Java et ajoute tests anti-régression